--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -14,6 +14,7 @@
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:background="@color/colorPrimary"
         app:canLoop="true"
         android:layout_marginTop="40dp"/>
     <TextView
